--- a/p2p平台/css/style.css
+++ b/p2p平台/css/style.css
@@ -589,7 +589,7 @@ filter:alpha(opacity=100);
 
 /**以上自定义radio box **/
 .pwdReset,.zhanghuset,.payset{margin:auto;margin-top:30px;width:1200px;padding-bottom:60px;border:solid 1px #dfdfdf;background-color:#fff;-webkit-box-shadow:0 4px 6px #999; -moz-box-shadow:0 4px 6px #999; box-shadow:0 4px 6px #999; position: relative; }
-.pwdReset{padding-bottom: 0;}
+.pwdReset{padding-bottom: 0;height:384px;}
 .registe-nav{margin-top: 20px;}
 .registe-nav img{display: inline-block;margin-left:-4px;}
 .registe-info{width:330px;margin:30px auto;}
