--- a/p2p平台/View/html/logon.html
+++ b/p2p平台/View/html/logon.html
@@ -43,7 +43,7 @@
             	<ul>
                     <li><a href="index.html" target="_blank" title="首页">首页</a></li>
                     <li><a href="invest.html" target="_blank" title="我要理财">我要理财</a></li>
-                    <li><a href="#" target="_blank" title="安全保障" >安全保障</a></li>
+                    <li><a href="insurance.html" target="_blank" title="安全保障" >安全保障</a></li>
                     <li><a href="help.html" target="_blank" title="帮助中心">帮助中心</a></li>
                     <li><a href="personinfo.html" target="_blank" title="账户中心">账户中心</a></li>
                     <li><a href="aboutus.html" target="_blank" title="关于我们">关于我们</a></li>
@@ -53,6 +53,10 @@
         </div>
 
    <div>
+   	
+<div class="pwdReset">
+
+   <div class="pwdReset-box">
             <div class="pwdReset-input">
                 <div class="pwdReset-input-ico1">
                 </div>
@@ -74,6 +78,10 @@
                 </div>
             </div>
         </div>
+        <div class="pwdReset-right">
+        <img src="../../images/banner-logon.png" alt="banner-logon.png">
+    </div>
+</div>
 
     </div>
 
