--- a/p2p平台/View/html/help.html
+++ b/p2p平台/View/html/help.html
@@ -44,7 +44,7 @@
             	<ul>
                     <li><a href="index.html" title="首页">首页</a></li>
                     <li><a href="invest.html" title="我要理财">我要理财</a></li>
-                    <li><a href="#" title="安全保障">安全保障</a></li>
+                    <li><a href="insurance.html" title="安全保障">安全保障</a></li>
                     <li><a href="#" style="color:orangered;" title="帮助中心">帮助中心</a></li>
                     <li><a href="personinfo.html" title="账户中心">账户中心</a></li>
                     <li><a href="aboutus.html"  title="关于我们">关于我们</a></li>
