--- a/p2p平台/View/html/invest.html
+++ b/p2p平台/View/html/invest.html
@@ -48,7 +48,7 @@
                     <ul>
                         <li><a href="index.html" target="_blank" title="首页">首页</a></li>
                         <li><a href="#" style="color:orangered;" title="我要理财">我要理财</a></li>
-                        <li><a href="#" target="_blank"  title="安全保障">安全保障</a></li>
+                        <li><a href="insurance.html" target="_blank"  title="安全保障">安全保障</a></li>
                         <li><a href="help.html" target="_blank" title="帮助中心">帮助中心</a></li>
                         <li><a href="personinfo.html" target="_blank" title="账户中心">账户中心</a></li>
                         <li><a href="aboutus.html" target="_blank" title="关于我们">关于我们</a></li>
