--- a/p2p平台/View/html/registe.html
+++ b/p2p平台/View/html/registe.html
@@ -298,7 +298,7 @@
             	<ul>
                     <li><a href="index.html" target="_blank" title="首页">首页</a></li>
                     <li><a href="invest.html" target="_blank" title="我要理财">我要理财</a></li>
-                    <li><a href="#" target="_blank" title="安全保障" >安全保障</a></li>
+                    <li><a href="insurance.html" target="_blank" title="安全保障" >安全保障</a></li>
                     <li><a href="help.html" target="_blank" title="帮助中心">帮助中心</a></li>
                     <li><a href="personinfo.html" target="_blank" title="账户中心">账户中心</a></li>
                     <li><a href="aboutus.html" target="_blank" title="关于我们">关于我们</a></li>
@@ -315,7 +315,7 @@
     <img id="img3"  style="display:none;"src="../../images/3.png">
 </div>
 <!--第一步 -->
-<div class="registe-info" id="regi-step1" style="display:none;">
+<div class="registe-info" id="regi-step1" style="display:block;">
     <from id="registeInfo" action="" method="post">
         <div class="pwdReset-title">
             <h2 style="font-size:19px;">必填信息</h2>
@@ -805,7 +805,7 @@
 </form>
 
 <!--第三步 -->
-            <div class="registe-info" id="regi-step3"style="display: block;">
+            <div class="registe-info" id="regi-step3"style="display:none;">
 
                 <div class="pwdReset-title" style="display: block;margin:0 auto;margin-top:150px;padding-bottom: 100px;">
                     <h2 style="font-size:20px;color:#ff9900;">账号注册成功，可直接登录.</h2>
